--- a/OperationOOP.Api/OperationOOP.Api.csproj
+++ b/OperationOOP.Api/OperationOOP.Api.csproj
@@ -15,4 +15,10 @@
     <ProjectReference Include="..\OperationOOP.Core\OperationOOP.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Endpoints\Lotus\" />
+    <Folder Include="Endpoints\Rose\" />
+    <Folder Include="Endpoints\Orchid\" />
+  </ItemGroup>
+
 </Project>
